--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pm2": "pm2 start processes.json --no-daemon",
+    "create": "npx sequelize db:create",
+    "migrate": "npx sequelize db:migrate",
+    "seed": "npx sequelize db:seed:all",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +20,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
+    "pm2": "^4.5.5",
     "sequelize": "^6.5.0"
   },
   "devDependencies": {
